[package]
name = "tiktok_rust"
version = "0.0.10"
edition = "2021"
repository = "https://github.com/Abraxas-365/tiktok_api"
license = "MIT"
description = "A Rust library for interacting with the TikTok API, enabling direct posting of content and querying creator information."
keywords = ["tiktok", "api", "video", "photo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
thiserror = "1.0.63"
derive_builder = "0.20.0"
actix-web = "4.9.0"
rand = "0.8.5"
base64 = "0.22.1"
sha2 = "0.10.8"
url = "2.5.2"
